--- a/layout/404.html
+++ b/layout/404.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211133055">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221211133055">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221211133055">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211190845">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221211190845">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221211190845">
 
 
 </head>
@@ -135,7 +135,7 @@
     </nav>
 </header>
 		<main class="page">
-			<section id="lottie" class="page__main main">
+			<section class="page__main main">
 				<div class="main__container">
 					<div class="main__body main__body-xl">
 						<div class="error__status">
@@ -153,18 +153,17 @@
 			</section>
 		</main>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211133055"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211190845"></script>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211133055"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211133055"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211133055"></script>
-
-<script src="js/app.min.js?_v=20221211133055"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211190845"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211190845"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211190845"></script>
+<script src="js/app.min.js?_v=20221211190845"></script>
 
 </body>
 
