--- a/layout/services.html
+++ b/layout/services.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211133055">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221211133055">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221211133055">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211190845">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221211190845">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221211190845">
 
 
 </head>
@@ -136,7 +136,7 @@
 </header>
 		<main class="page">
 
-			<section id="lottie" class="page__main main">
+			<section class="page__main main">
 				<div class="main__container">
 					<div class="main__body main__body-md">
 						<ul class="main__navigation navigation">
@@ -151,7 +151,10 @@
 							Комплексные поставки гражданского строительства
 						</h1>
 						<div class="main__subtitle">
-							Поставляемые электроматериалы и электрооборудование сертифицированы в системе Госстандарта РФ на соответствие требованиям безопасности и соответствуют всем российским стандартам. Компания "ПСК СтройИнвест" несёт полную ответственность вместе с заводами-изготовителями за качество поставляемой продукции и оборудования.
+							Поставляемые электроматериалы и электрооборудование сертифицированы в системе Госстандарта
+							РФ на соответствие требованиям безопасности и соответствуют всем российским стандартам.
+							Компания "ПСК СтройИнвест" несёт полную ответственность вместе с заводами-изготовителями за
+							качество поставляемой продукции и оборудования.
 						</div>
 					</div>
 				</div>
@@ -213,7 +216,8 @@
 						<div class="products__body">
 							<form action="#" class="products__search search">
 								<div class="form__wrapper">
-									<input type="text" name="search" class="form__input search__input" placeholder="Поиск">
+									<input type="text" name="search" class="form__input search__input"
+										placeholder="Поиск">
 									<button type="button" class="form__input-clear icon-close"></button>
 								</div>
 								<button type="submit" class="search__btn btn btn-orange btn-sm icon-search"></button>
@@ -238,13 +242,14 @@
 												По популярности
 											</li>
 										</ul>
-										<input type="text" class="dropdown__input hidden" hidden name="sorting" value="name">
+										<input type="text" class="dropdown__input hidden" hidden name="sorting"
+											value="name">
 									</div>
 								</div>
 								<div class="products__grid">
 									<div class="products__grid-item product">
 										<a href="/product.html" class="product__image">
-											<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt="product"></picture>
+											<picture><source srcset="img/about.webp"type="image/webp"><img src="img/about.jpg" alt="product"></picture>
 										</a>
 										<div class="product__desc">
 											<a href="/product.html" class="product__title">
@@ -673,18 +678,17 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211133055"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211190845"></script>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211133055"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211133055"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211133055"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211133055"></script>
-
-<script src="js/app.min.js?_v=20221211133055"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211190845"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211190845"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211190845"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211190845"></script>
+<script src="js/app.min.js?_v=20221211190845"></script>
 
 </body>
 
