--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -4,7 +4,7 @@
                         <h1 class="main__title title-xl">
                             {{MAINHEADING}}
                         </h1>
-                        <a href="#anim-content" class="main__btn btn btn-orange">
+                        <a href="/company/" class="main__btn btn btn-orange">
                             Подробнее
                         </a>
                     </div>
