--- a/src/site/templates/modals/modal_base.htm
+++ b/src/site/templates/modals/modal_base.htm
@@ -1,9 +1,9 @@
-<div class="modal-wrapper modal-{{CODE}}" id="modal-{{ID}}">
-		<div class="modal">
-			<div class="contents">
-				<div class="modal-close" title="Закрыть"></div>
+<div id="modal" class="popup">
+    <div class="popup__content">
+        <button type="button" class="popup__close icon-close"></button>
+        <div class="popup__body">
 
-				{{CONTENT}}
-			</div>
-		</div>
-	</div>
+        	{{CONTENT}}
+        </div>
+    </div>
+</div>
