--- a/src/site/templates/modals/modal_video.htm
+++ b/src/site/templates/modals/modal_video.htm
@@ -1,9 +1,15 @@
-<div class="video-container">
-	<div id="js-youtube-video"></div>
-</div>
-<div id="video-lang-swticher">
-		<ul>
-			<li><a href="{{CODERUS}}" data-lang="ru">Ру</a></li>
-			<li><a href="{{CODEENG}}" data-lang="en">En</a></li>
-		</ul>
-	</div>
+<div id="js-youtube-video"></div>
+            <div class="popup__switcher video__switcher">
+                <ul class="video__switcher-list">
+                    <li class="video__switcher-item">
+                        <a href="{{CODERUS}}" data-lang="ru" class="video__switcher-btn">
+                            Руc
+                        </a>
+                    </li>
+                    <li class="video__switcher-item">
+                        <a href="{{CODEENG}}" data-lang="en" class="video__switcher-btn">
+                            Eng
+                        </a>
+                    </li>
+                </ul>
+            </div>
