--- a/src/site/templates/production/production_direction.htm
+++ b/src/site/templates/production/production_direction.htm
@@ -17,6 +17,7 @@
                     <div class="products__wrapper">
                         <div class="products__menu products-menu">
                             {{INCLUDE:CATEGORIES}}
+                            {{INCLUDE:SUBCATEGORIES}}
                         </div>
                         <div class="products__body">
                             <form action="#" class="products__search search">
