--- a/src/site/templates/video/bl-video-main.htm
+++ b/src/site/templates/video/bl-video-main.htm
@@ -1,4 +1,4 @@
-<section class="page__video video" data-animation>
+<section class="page__video video">
                     <div class="video__container">
                         <div class="video__body">
                             <div class="video__main">
@@ -9,7 +9,7 @@
                                     Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
                                 </div>
                             </div>
-                            <button type="button" data-modal="modal" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
+                            <button type="button" data-modal="modal" data-video  data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
                                 <picture><source srcset="/img/benefits/01.webp" type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
                             </button>
                         </div>
