--- a/src/site/templates/video/bl-video.htm
+++ b/src/site/templates/video/bl-video.htm
@@ -7,7 +7,8 @@
                                     Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
                                 </div>
                             </div>
-                            <a href="" class="video__link icon-play" data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}">
-                                <picture><source srcset="/img/benefits/01.webp" type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
-                            </a>
+                            <button type="button" data-modal="modal" data-video  data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__link icon-play">
+                                <picture><source srcset="/img/benefits/01.webp"type="image/webp"><img src="/img/benefits/01.jpg" class="cover-image" alt="video preview"></picture>
+                            </button>
                         </div>
+
