--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -28,66 +28,7 @@
                 <li class="footer-body__list-item footer-body__list-caption">
                     Каталог
                 </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        СИП-арматура
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Светотехническая продукция
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Автоматические выключатели 
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Приборы учёта
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Трансформаторы тока
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Трансформаторы ТМГ
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Кабельно-проводниковая продукция
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Подстанции
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Кабельно-несущие системы
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        ДГУ
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Муфты, кабельная арматура
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Щитовое оборудование
-                    </a>
-                </li>
+                {{CATEGORIESNAV}}
             </ul>
         </div>
     </div>
